US20968 History Page - Fix stretched image

--- a/_assets/stylesheets/pages/_history.scss
+++ b/_assets/stylesheets/pages/_history.scss
@@ -325,6 +325,7 @@
 
     .biblical-truth-content-col-2 {
       display: flex;
+      flex-direction: row;
       justify-content: flex-end;
 
       @media screen and (min-width: $screen-md) {
@@ -334,6 +335,7 @@
       }
 
       img {
+        align-self: center;
         max-width: 75%;
 
         @media screen and (min-width: $screen-md) {
